[package]
name = "concept_db"
version = "0.1.2.1"
edition = "2024"
repository = "https://docs.rs/concept_db/latest/concept_db/"
description = "A key-value DB for converting structs into a DB of assorted json files"
license = "MIT"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
