[package]
name = "concept_db"
version = "0.1.242"
edition = "2024"
rust-version = "1.85"
authors = ["Julian Mendez <Jul1anMendez@proton.me>"]
email = "Jul1anMendez@proton.me"
repository = "https://docs.rs/concept_db/latest/concept_db/"
description = "A key-value DB for converting structs into a DB of assorted json files"
license = "MIT"

[package.metadata]
email = "Jul1anMendez@proton.me"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
